# automerge-flutter

./: LICENSE  README.md
flutters/: README.md  pubspec.yaml
flutters/android/app/: build.gradle
flutters/android/app/src/main/: AndroidManifest.xml
flutters/ios/Runner/: Info.plist  bridge_generated.h
flutters/ios/Runner.xcodeproj/: project.pbxproj
flutters/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  ffi.dart  ffi_web.dart  main.dart
flutters/linux/: CMakeLists.txt  my_application.cc
flutters/macos/Runner.xcodeproj/: project.pbxproj
flutters/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutters/macos/Runner/Configs/: AppInfo.xcconfig
flutters/radd/: Cargo.toml
flutters/radd/radd.xcodeproj/: project.pbxproj
flutters/radd/radd.xcodeproj/project.xcworkspace/xcuserdata/aran.xcuserdatad/: UserInterfaceState.xcuserstate
flutters/radd/radd.xcodeproj/xcuserdata/aran.xcuserdatad/xcschemes/: xcschememanagement.plist
flutters/radd/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
flutters/test/: widget_test.dart
flutters/web/: cross_origin_proxy.dart  index.html  manifest.json
flutters/windows/: CMakeLists.txt
flutters/windows/runner/: Runner.rc  main.cpp
wsserver/: pubspec.yaml
wsserver/lib/: wsserver.dart
